worked on intro

--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -49,23 +49,31 @@
 
 \maketitle
 
-\hh{Generally: avoid 'can be'. Replace by 'is'.  }
+To check on when editing writing: 
+\begin{itemize}
+\item \hh{Generally: avoid 'can be'. Replace by 'is'.  }
+\item \kg{words to go back and make sure I am not using too often: ability, produce}
+\end{itemize}
 
 \section{Introduction}
 
-\kg{Added in Heike's suggestions and made a few changes of my own to this paragraph:} In the field of statistics, there are two main uses for models: interpretation and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to provide accurate predictions in a wide range of problems, this predictive ability comes at the cost of interpretability. These models are typically complex and lack a functional form, which makes it not possible to directly interpret the models and has earned them the reputation of being black boxes. The ability to interpret a model helps to diagnose the model and understand the predictions, and in some areas of application, the need to be able to explain the results from a model is critical.
+\kg{I added in Heike's suggestions to the first paragraph and made some changes of my own. I divided the first paragraph into two parts and added a discusssion on reasons why interpretability is beneficial. Note that I also switched the two model uses from ``interpretation and prediction" to ``inference and prediction". Since a key part of the paper is about being able to interpret predictive models, I thought it might be good to distinguish between interpretation and inference. Heike, what do you think?}\\
+\\
+In the field of statistics, there are two main uses for models: \kg{inference} and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of problems, their predictive accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but lack a functional form, so it not possible to directly interpret them. As a result, they produce predictions that lack an explanation, which has earned them the reputation of being black box models.
 
-The forensics sciences and the heath care industry are two areas that have benefitted from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In \hh{both} of these cases, the decisions made based on the results of the machine learning models would greatly impact the lives of human beings. If it is not possible to explain the output from a model, it becomes questionable whether to trust the results from the model to make decisions.
+The ability to interpret a model serves multiple purposes. When a model is first fit, interpretations help to diagnosing the model. If it is possible to know what variables are influencing a prediction, it can be determined if the predictions are based on reasonable variables. If not, appropriate adjustments to the model can be made. After a model has been diagnosed and found to be reasonable, the explanations for the predictions can be used to understand the underlying mechanism that produced the data and provide an argument for why the predictions should be trusted. In some areas of application, this ability to be able to explain the results from a model is critical.
+
+The forensics sciences and the heath care industry are two areas that have benefitted from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In both of these \kg{fields}, the decisions made based on the results of the machine learning models would greatly impact \kg{people's lives}. If it is not possible to explain the output from a model, it becomes questionable whether to \kg{rely} on the predictions to make important decisions.
 
 As an example, suppose that forensics examiners are trying to determine if a bullet used in a crime was fired from the gun that belongs to a suspect in the investigaion. A random forest model could be used to produce a probability that the bullet was fired from the gun under question. Even if the model returns a high probability of a match, it will be difficult for a jury to trust the results from the model when deciding whether to convict the suspect without the forensics examiners having the ability to explain which factors in the model led to the high probability.
 
-The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect (https://eugdpr.org/the-regulation/gdpr-faqs/). The regulation includes a policy that gives the right for subjects affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As Goodman and Flaxman (2016) point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. At minimum, it will require that an explanation of how the input variables relate to the predictions.
+The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect \footnote{https://eugdpr.org/the-regulation/gdpr-faqs/}. The regulation includes a policy that gives the right for \kg{individuals} affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As \citet{goodman:2016} point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. \kg{While they point out that the wording of the policy leaves room for interpretation}, they believe that, at minimum, it will require that an explanation of how the input variables relate to the predictions.
 
-\kg{Moved the last sentence from the first paragraph here:} As a result of the desire to be able to explain the predictions, an area of research has emerged on machine learning explain the output from machine learning algorithms. One approach that is being taken to remedy the problem of uninterpretable models is to develop a model explainer that provides insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. Recently, a handful of model explainers have been developed (reference). LIME (local interpretable model explanations) is one such model explainer (reference).
+\kg{As a result of the push (wording?) to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms.} One approach that is being taken to remedy the problem of uninterpretable models is to develop model explainers that provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. Recently, a handful of model explainers have been developed (reference). LIME (local interpretable model explanations) is one such model explainer (reference).
 
 While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
 
-The explanation that is produced from the explainer is also a prediction or an element of a model. Since it is not directly extracted from the complex model, it is important to ask the question, ``How reliable is the explanation?". Currently, there are no recommendations for how to assess the explanations from LIME (need to check to make sure this is a true statement). \kg{I'd like to expand on this paragraph since this is really the focus of the paper. Then the last paragraph in the intro can outline the paper.}
+The explanation that is produced from the explainer is also a prediction or an element of a model. Since it is not directly extracted from the complex model, it is important to ask the question, ``How reliable is the explanation?". Currently, there are no recommendations for how to assess the explanations from LIME (need to check to make sure this is a true statement). \kg{LIME provides easily understandable explanations, but the current implementations of LIME are based on linear models, which are not assessed.} \kg{I'd like to expand on this paragraph since this is really the focus of the paper. Then the last paragraph in the intro can outline the paper.}
 
 \kg{I moved this paragraph here, because I think this is where I was to first introdude this concept, but it need a lot of reworking to fit in with the intro, and I need to finish writing my thoughts.} Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. \hh{Accepted best practice for all}  predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
