updated to do list

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,12 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 **Current Week**
 
-- look into bibText and add to paper
-- work on paper
+- finish writing and editing introduction
+- draft background section
+- fix outline of the rest of the paper now that I have a clear vision
+
+**Later**
+
 - finish journal on understanding lime (look at the RF in the local region
   lime is considering to see if it agrees with the lime explanations)
 - think about how the argmin is accomplished by the LIME R package
@@ -35,9 +39,6 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 - look more into Molnar and his adviser Bernd
 - Siggi suggests refitting the RF model to the perturbations and then continuing with LIME with the RF predictions from the new model - this may help to understand if the problems are due to the sampling procedure or LIME itself
 - he also suggested looking into SMOTE for dealing the inbalance in the classes with sampling
-
-**Later**
-
 - look back at 601 notes from Kaiser and Hadley's removing the blindfold and
   think about how this could be applied with random forests
 - try retriculate to apply python version of lime
