finished updates on intro and am feeling okay about where it is right now

--- a/papers/lime_diagnostics/references.bib
+++ b/papers/lime_diagnostics/references.bib
@@ -396,6 +396,32 @@ Guns Using 3D Images of Bullets },
   url = {http://CRAN.R-project.org/doc/Rnews/},
 }
 
+@inproceedings{ribeiro:2016,
+  author    = {Marco Tulio Ribeiro and
+               Sameer Singh and
+               Carlos Guestrin},
+  title     = {"Why Should {I} Trust You?": Explaining the Predictions of Any Classifier},
+  booktitle = {Proceedings of the 22nd {ACM} {SIGKDD} International Conference on
+               Knowledge Discovery and Data Mining, San Francisco, CA, USA, August
+               13-17, 2016},
+  pages     = {1135--1144},
+  year      = {2016},
+}
+
+@article {riva:2014,
+  author = {Riva, Fabiano and Champod, Christophe},
+  title = {Automatic Comparison and Evaluation of Impressions Left by a Firearm on Fired Cartridge Cases},
+  journal = {Journal of Forensic Sciences},
+  volume = {59},
+  number = {3},
+  issn = {1556-4029},
+  url = {http://dx.doi.org/10.1111/1556-4029.12382},
+  doi = {10.1111/1556-4029.12382},
+  pages = {637--647},
+  keywords = {forensic science, firearms identification, likelihood ratio, cartridge cases, 3D topographies, evaluation},
+  year = {2014},
+}
+
 @article{roberge:2006,
   author = {Roberge, D. and Beauchamp, A.},
   title={The use of BulletTrax-3D in a study of consecutively manufactured barrels},
@@ -433,20 +459,6 @@ Guns Using 3D Images of Bullets },
   year = {2015},
   note = {{R} package version 1.5.3},
   url = {http://CRAN.R-project.org/package=rpart.plot},
-}
-
-@article {riva:2014,
-  author = {Riva, Fabiano and Champod, Christophe},
-  title = {Automatic Comparison and Evaluation of Impressions Left by a Firearm on Fired Cartridge Cases},
-  journal = {Journal of Forensic Sciences},
-  volume = {59},
-  number = {3},
-  issn = {1556-4029},
-  url = {http://dx.doi.org/10.1111/1556-4029.12382},
-  doi = {10.1111/1556-4029.12382},
-  pages = {637--647},
-  keywords = {forensic science, firearms identification, likelihood ratio, cartridge cases, 3D topographies, evaluation},
-  year = {2014},
 }
 
 @Manual{shiny,
