--- a/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
+++ b/papers/lime_diagnostics/visual-diagnostics-of-a-model-explainer.Rnw
@@ -52,41 +52,56 @@
 To check on when editing writing: 
 \begin{itemize}
 \item \hh{Generally: avoid 'can be'. Replace by 'is'.  }
-\item \kg{words to go back and make sure I am not using too often: ability, produce}
+\item \kg{words to go back and make sure I am not using too often: ability, produce, understand}
 \end{itemize}
 
 \section{Introduction}
 
-\kg{I added in Heike's suggestions to the first paragraph and made some changes of my own. I divided the first paragraph into two parts and added a discusssion on reasons why interpretability is beneficial. Note that I also switched the two model uses from ``interpretation and prediction" to ``inference and prediction". Since a key part of the paper is about being able to interpret predictive models, I thought it might be good to distinguish between interpretation and inference. Heike, what do you think?}\\
+\kg{Updates from KG:
+\begin{itemize}
+\item Added in Heike's suggestions to the first paragraph and made some changes of my own 
+\item Divided the first paragraph into two parts and added a discussion on reasons why interpretability is beneficial
+\item Switched the two model uses from ``interpretation and prediction" to ``inference and prediction" to distinguish between interpretation and inference
+\item Added most of the references (still need to add the ones about model explainers)
+\item Fixed some wordings here and there
+\item Expanded on the importance of assessing model explainers
+\item Added an outline of the rest of the paper
+\end{itemize}
+At some point, I plan to return to this section to work on the wording, but I finally have it at a point where it contains the ideas that I had intended. Heike, what do you think of it at this point?}\\
 \\
-In the field of statistics, there are two main uses for models: \kg{inference} and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of problems, their predictive accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but lack a functional form, so it not possible to directly interpret them. As a result, they produce predictions that lack an explanation, which has earned them the reputation of being black box models.
+In the field of statistics, there are two main uses for models: \kg{inference} and prediction. Machine learning models are often used for the latter purpose. While these models have been proven to perform well in a wide range of prediction problems, their accuracy comes at the cost of interpretability. They are often complex algorithms that are good at identifying patterns in the data but lack a functional form, so it not possible to directly interpret them. As a result, they produce predictions that lack an explanation, which has earned them the reputation of being ``black box models".
 
-The ability to interpret a model serves multiple purposes. When a model is first fit, interpretations help to diagnosing the model. If it is possible to know what variables are influencing a prediction, it can be determined if the predictions are based on reasonable variables. If not, appropriate adjustments to the model can be made. After a model has been diagnosed and found to be reasonable, the explanations for the predictions can be used to understand the underlying mechanism that produced the data and provide an argument for why the predictions should be trusted. In some areas of application, this ability to be able to explain the results from a model is critical.
+\kg{The ability to interpret a model serves multiple purposes. When a model is first fit, interpretations help to diagnose the model. Knowing which variables influence a prediction makes it possible to determine if the predictions are based on reasonable variables. If not, appropriate adjustments to the model can be made. After a model has been diagnosed, the explanations for the predictions are used to understand the underlying mechanism that produced the data and provide an argument for why the predictions should be trusted. In some areas of application, this ability to be able to explain the results from a model is critical.}
 
-The forensics sciences and the heath care industry are two areas that have benefitted from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In both of these \kg{fields}, the decisions made based on the results of the machine learning models would greatly impact \kg{people's lives}. If it is not possible to explain the output from a model, it becomes questionable whether to \kg{rely} on the predictions to make important decisions.
+The forensics sciences and the heath care industry are two areas that have benefited from machine learning but have an obvious need for explainable predictions. For example, \citet{aoas} discuss the use of a random forest model in the forensics sciences to determine whether two bullets were fired from the same gun. \citet{yu:2018} describe how healthcare has advanced through the use of machine learning in ways such as using neural networks to automate medical image diagnoses and implementing Bayesian networks to predict clinical outcomes. In both of these \kg{fields}, the decisions made based on the results of the machine learning models would greatly impact \kg{people's lives}. If it is not possible to explain the output from a model, it becomes questionable whether to \kg{rely} on the predictions to make important decisions.
 
-As an example, suppose that forensics examiners are trying to determine if a bullet used in a crime was fired from the gun that belongs to a suspect in the investigaion. A random forest model could be used to produce a probability that the bullet was fired from the gun under question. Even if the model returns a high probability of a match, it will be difficult for a jury to trust the results from the model when deciding whether to convict the suspect without the forensics examiners having the ability to explain which factors in the model led to the high probability.
+As an example, suppose that forensics examiners are trying to determine if a bullet used in a crime was fired from the gun that belongs to a suspect in the investigation. A random forest model could be used to produce a probability that the bullet was fired from the gun under question. Even if the model returns a high probability of a match, it will be difficult for a jury to trust the results from the model when deciding whether to convict the suspect without the forensics examiners having the ability to explain which factors in the model led to the high probability.
 
-The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect \footnote{https://eugdpr.org/the-regulation/gdpr-faqs/}. The regulation includes a policy that gives the right for \kg{individuals} affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As \citet{goodman:2016} point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. \kg{While they point out that the wording of the policy leaves room for interpretation}, they believe that, at minimum, it will require that an explanation of how the input variables relate to the predictions.
+The European Union has taken the desire to provide explanations from machine learning models a step further. In May 2018, the General Data Protection Regulation (GDPR) went into effect \footnote{https://eugdpr.org/the-regulation/gdpr-faqs/}. The regulation includes a policy that gives the right for \kg{individuals} affected by decisions made via automated algorithms to understand the logic behind the decisions being made. As \citet{goodman:2016} point out, this regulation will have a great effect on the way that machine learning algorithms are used to make decisions. \kg{The wording of the policy leaves room for interpretation, but they believe that}, at minimum, it will require that an explanation of how the input variables relate to the predictions.
 
-\kg{As a result of the push (wording?) to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms.} One approach that is being taken to remedy the problem of uninterpretable models is to develop model explainers that provide insight into the performance of the complex model. A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into mechanism of how the model produces predictions. Recently, a handful of model explainers have been developed (reference). LIME (local interpretable model explanations) is one such model explainer (reference).
+\kg{As a result of the movement to produce explainable predictions, an area of research has emerged focusing on developing ways to explain output from machine learning algorithms.} One approach that is being taken is to develop model explainers that provide insight into the performance of the complex model (reference). A model explainer is a method that is separate from the model but uses the model and output from the model to provide understanding into \kg{the process that the model goes through} to produce predictions. LIME (local interpretable model explanations) is one such model explainer \citep{ribeiro:2016}.
 
-While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex "black box model" in a local region around a prediction of interest. (a good place to include an image to help with this explanation)
+While some model explainers are focused on understanding a model at the global level, LIME was designed to explain the model at the local level for a single prediction of interest. \kg{It was designed to work with any model and to produce easily understandable explanations.} Conceptually, LIME fits a simple interpretable model, referred to as the explainer, that is meant to capture the behavior of the complex ``black box model" in a local region around a prediction of interest. \kg{The interpretation of the simple model is used to explain the variables that most influenced the prediction made by the complex model.}
 
-The explanation that is produced from the explainer is also a prediction or an element of a model. Since it is not directly extracted from the complex model, it is important to ask the question, ``How reliable is the explanation?". Currently, there are no recommendations for how to assess the explanations from LIME (need to check to make sure this is a true statement). \kg{LIME provides easily understandable explanations, but the current implementations of LIME are based on linear models, which are not assessed.} \kg{I'd like to expand on this paragraph since this is really the focus of the paper. Then the last paragraph in the intro can outline the paper.}
+\kg{It is important to keep in mind that the explanation produced by the explainer is not a direct interpretation of the complex model. Instead, it is based on a model that is trying to mimic a part of the complex model.} Thus, it is necessary to ask the question, ``How reliable is the explanation?". \kg{One way to answer this question is to understand how well the explainer model approximates the complex model.}
 
-\kg{I moved this paragraph here, because I think this is where I was to first introdude this concept, but it need a lot of reworking to fit in with the intro, and I need to finish writing my thoughts.} Predictive models are used in both regression and classification settings. For this paper, we will focus on the classification setting, and in particular, we will only discuss the case with a dichotomous response variable. \hh{Accepted best practice for all}  predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
+\kg{The current implementations of LIME use a linear regression model as the explainer model (references to R and Python packages). These implementations are relying on the assumption that the relationship between the complex model predictions and the features is linear in a local region. It is possible to imagine scenarios where this is not the case. Thus, it is important to assess this assumption in order to trust the explanations produced by LIME. Additionally, the implementations offer various input settings, but little work has been done to provide advice on how to specify the settings in practice (look more into this). An assessment of the explanations could also help to determine which settings produce the explainer model with the best approximation of the complex model.} 
 
-In this paper, we will present some visualizations tools to assess the explanations from LIME in classification problems. Additionally, we will show an example using these tools on explanations from a forensics bullet matching dataset, and we will discuss how the results from the example provide some possible insights into the workings of LIME.
-\hh{still to come: outline of the remainder of the paper.}
+In this paper, we will present some visualizations tools to assess the explanations from LIME. While predictive models are used in both regression and classification settings, we will focus on the classification setting for this paper. For additional simplicity, we will only discuss the case with a dichotomous response variable, but we believe that the work is adaptable for other situations.
 
-\section{Background}
+\kg{Section \ref{background} provides some background on explainer models that have been developed, a description of the LIME algorithm, and the current implementations of LIME. In Section \ref{methods}, we discuss ways to assess the LIME explainer model and introduces our visualization tools. Section \ref{application} demonstrates the use of our diagnostic tools with a logistic regression model fit to the iris data (?) and a random forest model fit to a forensics bullet matching dataset. To conclude, Section \ref{discussion} reviews the importance of assessing the LIME explainer model, discusses how the results from the example provide possible insights into the workings of LIME, and suggests future research directions.}
+
+\section{Background} \label{background}
+
+\kg{Just putting this here for now - needs lots of work or I may even remove it:} \hh{Accepted best practice for all} predictive models is \hh{that during the model fitting process}, the data is divided into training and testing portions. The training data is used to fit the complex model, and the testing data is used to assess the model. \hh{This is done to prevent overfitting and to get a more accurate assessment of the prediction error of the model.} The complex model is then applied to the features in the testing data, and the resulting predictions are compared to ground truth. Of \hh{particular} interest during this assessment are the cases when the model is wrong. In the dichotomous response classification case, there are two ways in which the model can be wrong. The model can make a type I error in which..., or the model can make a type II error in which...
 
 \subsection{Model Explainers}
 
 \subsection{Overview of LIME}
 
 It does this by using the features from the training data to simulate a new dataset on which the simple model is fit. The complex model is applied to the simulated dataset to obtain predictions. The observations associated with predictions are used as the response variable in a ridge regression model with the the simulated features as the predictor variable with the highest weight given to observations closest to the prediction of interest. Feature selection is performed to identify the most important variables in the local region. A final ridge regression model is fit with the selected features, and the coefficients of the model are used to interpret the behavior of the complex model.
+
+(a good place to include an image to help with this explanation)
 
 \subsection{LIME Algorithm}
 
@@ -108,7 +123,7 @@ Let $\textbf{X}$ be an $n$ by $p$ data matrix with $p$ features and $n$ observat
 (i.e. want to minimize $\mathcal{L}(f, g, \Pi_x)$ and keep $\Omega(g)$ low enough to be interpretable by humans)
 \end{itemize}
 
-\subsection{Implemention of LIME in R}
+\subsection{Implementation of LIME in R}
 
 (section describing the procedure that is currently used by the LIME R package)
 
@@ -123,7 +138,16 @@ The LIME R package allows for the following four methods to sample the perturbat
 
 The methods of equally spaced bins and quantile bins also allow the user to specify the number of bins. As of now, there are no recommendations or procedures provided for how to determine which method to use. By default, LIME uses four quantile bins. It was of interest to see how the explanations from LIME varied across the four sampling methods when applied to the bullet matching data. The LIME algorithm was applied to each prediction from the test data obtained from the 'rtrees' random forest model for each of the four sampling methods. Within the bin based sampling methods, the algorithm was applied for 2 to 6 bins. It was decided to only go up to 6 bins since the more bins used the more complex the explanation becomes.
 
-\section{Methods}
+\section{Methods} \label{methods}
+
+Ways to understand if the LIME explainer is doing a good job:
+
+\begin{itemize}
+\item diagnose the explainer to make sure that it is fitting the data well
+\item compare the prediction made by the explainer to the complex model prediction
+\item visualize all explanations to understand if the explanations are local or global
+\item compare results from different input options
+\end{itemize}
 
 \subsection{Diagnostic Tool 1}
 
@@ -131,7 +155,7 @@ The methods of equally spaced bins and quantile bins also allow the user to spec
 
 \subsection{etc...}
 
-\section{Application}
+\section{Application} \label{application}
 
 \subsection{Iris Data (?)}
 
@@ -140,9 +164,11 @@ The methods of equally spaced bins and quantile bins also allow the user to spec
 1. explainer model generally has very low $R^2$ (probably due to binning)
 2. "local" explanations are not local but are driven by the ("global") marginal distributions of covariates
 
-In order to assess the LIME explanations created using different sampling methods, it was of interest to compare the top three features chosen as the important predictors by lime within a case from the test data across the different sampling methods. Figure ... is a heatamp showing the top feature chosen by lime for each of the cases in the test data and different bin based sampling methods. The rows represent the cases in the test data, and the columns represent the sampling methods. There are twenty methods included in the plot. These include the equally spaced bins and quantile bins from the lime package and the random forest score tree based bins and the same source tree based bins proposed in this paper. The rows are faceted by the test set and whether or not the observation is a match or not. The columns are faceted by these methods, and the columns within a facet represent the number of bins. Each method has 2 to 6 bins. The colors represent the top feature chosen by lime.
+In order to assess the LIME explanations created using different sampling methods, it was of interest to compare the top three features chosen as the important predictors by lime within a case from the test data across the different sampling methods. Figure ... is a heat map showing the top feature chosen by lime for each of the cases in the test data and different bin based sampling methods. The rows represent the cases in the test data, and the columns represent the sampling methods. There are twenty methods included in the plot. These include the equally spaced bins and quantile bins from the lime package and the random forest score tree based bins and the same source tree based bins proposed in this paper. The rows are faceted by the test set and whether or not the observation is a match or not. The columns are faceted by these methods, and the columns within a facet represent the number of bins. Each method has 2 to 6 bins. The colors represent the top feature chosen by lime.
 
 The variables of ccf and cms immediately show up as common variables chosen across all of the sampling methods. However, the patterns across the number of bins withing the sampling methods are different. When equally spaced bins are used, the top feature chosen is consistent across all cases within a number of bins category. For example, ccf is almost always chosen (change to actual number) with 2 equally spaced bins, matches is almost always chosen with 3 equally spaced bins, and non\_cms is always chosen for the nonmatches with 5 and 6 equally spaced bins. This shows that with the bullet matching data, the top feature chosen with equally spaced bins is an artifact of the number of bins used. With equally spaced bins, this figure suggest that LIME is providing global explanations as opposed to local explanations. It would be preferable that the top feature chosen was more consistent across the number of bins and more variable across the cases. This would suggest that the top feature chosen is dependent on the feature values associated with a particular case and not just on which feature is the best explainer when $b$ number of bins are used.
+
+\section{Discussion} \label{discussion}
 
 %\backmatter
 
