updated to do list

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,13 +14,16 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 ## Talking points
 
+- can I remove some of the sources from the references file that I am not going to use?
+- I finished writing and editing the introduction - what do you think?
+
 ## To Do List
 
-**Current Week**
+**Current**
 
-- finish writing and editing introduction
 - draft background section
 - fix outline of the rest of the paper now that I have a clear vision
+- read through papers giving an overview of the current explanation methods
 
 **Later**
 
@@ -70,59 +73,59 @@ Link to csafe server: https://isu-csafe.stat.iastate.edu/rstudio/
 
 Descriptions of the materials in this respository are listed below.
 
-#### app
+**app**
 
 This folder contains files for Shiny app for visualizing the LIME explanations associated with the bullet land comparisons: 
 
-- **app.R**: code for the Shiny app
+- `app.R`: code for the Shiny app
 
-#### code
+**code**
 
 This folder is a place for storing code that is used throughout the project:
 
-- **helper_functions.R**: R script with functions that I use in the journals and will probably end up using in the papers as well
+- `helper_functions.R`: R script with functions that I use in the journals and will probably end up using in the papers as well
 
-#### data
+**data**
 
 This folder is a location for storing raw and created data for the project:
 
-- **hamby173and252_train.csv**: training data that I cleaned (it should match the data used to fit `rtrees`)
-- **hamby224_bin_boundaries.rds**: contains the boundaries for the bins as created by the `lime` function for each of the LIME input settings from the single implementation 
-- **hamby224_bins.rds**: contains nice forms of the bin intervals (i.e. [lower, upper)) created using the bin boundaries for each of the LIME input settings from the single implementation 
-- **hamby224_explain**: the output from the `explain` function in lime from the single implementation with all of the different input options
-- **hamby224_lime**: the output from the `lime` function in lime from the single implementation with all of the different input options
-- **hamby224_lime_comparisons**: a dataset with summaries of the LIME explanations from the single implementation with all of the different input options
-- **hamby224_lime_inputs**: LIME input settings used for the single implementation of LIME
-- **hamby224_sensitivity_inputs**: LIME input settings used for the sensativity analysis of LIME
-- **hamby224_sensitivity_joined.csv**: the test data and the LIME explanations from the sensativty analysis joined in a dataframe
-- **hamby224_sensitivity_outputs.rds**: outputs from the `explain` function applied for each of the different input settings from the sensativity analysis combined in one dataframe
-- **hamby223_test.csv**: testing data that I cleaned (created from sets 1 and 11 of the Hamby 224 study)
-- **hamby224_test_explain.rds**: dataframe with the testing data and the output LIME explanation data from the single implementation with all of the different input options
+- `hamby173and252_train.csv`: training data that I cleaned (it should match the data used to fit `rtrees`)
+- `hamby224_bin_boundaries.rds`: contains the boundaries for the bins as created by the `lime` function for each of the LIME input settings from the single implementation 
+- `hamby224_bins.rds`: contains nice forms of the bin intervals (i.e. [lower, upper)) created using the bin boundaries for each of the LIME input settings from the single implementation 
+- `hamby224_explain`: the output from the `explain` function in lime from the single implementation with all of the different input options
+- `hamby224_lime`: the output from the `lime` function in lime from the single implementation with all of the different input options
+- `hamby224_lime_comparisons`: a dataset with summaries of the LIME explanations from the single implementation with all of the different input options
+- `hamby224_lime_inputs`: LIME input settings used for the single implementation of LIME
+- `hamby224_sensitivity_inputs`: LIME input settings used for the sensativity analysis of LIME
+- `hamby224_sensitivity_joined.csv`: the test data and the LIME explanations from the sensativty analysis joined in a dataframe
+- `hamby224_sensitivity_outputs.rds`: outputs from the `explain` function applied for each of the different input settings from the sensativity analysis combined in one dataframe
+- `hamby223_test.csv`: testing data that I cleaned (created from sets 1 and 11 of the Hamby 224 study)
+- `hamby224_test_explain.rds`: dataframe with the testing data and the output LIME explanation data from the single implementation with all of the different input options
 - raw: original data given to me by Heike
-    - **features-hamby173and252.csv**
-    - **h224-set1-features.rds**
-    - **h224-set11-features.rds**
+    - `features-hamby173and252.csv`
+    - `h224-set1-features.rds`
+    - `h224-set11-features.rds`
   
-#### journals
+**journals**
 
 This folder contains folders with research journals.
 
-- **00-objectives_and_ideas**: background of the research project, goals of the project, concerns with LIME, and ideas to try
-- **01-training_and_testing_data**: information on the Hamby data, understanding the raw data, and cleaning of the training and testing data
-- **02-plotting_training_and_testing_data**: exploratory plots of the training and testing data
-- **03-computation_issues**: documentation of some of the computation issues I ran into during the project
-- **04-lime_algorithm_and_proposed_methods**: rough draft of the lime algorithm as implemented in the lime R package and proposed methods for improving the lime algorithm
-- **05-applying_lime_to_rtrees**: application of lime and sensativity analysis for many different input options
-- **06-assessing_lime_explanations**: assessment of the lime explanations
-- **07-logistic_regression**: logistic regressions fit to the bullet data and application of lime to the logistic regression
-- **08-iris_comparison**: applying LIME to a random forest fit to the iris data
-- **09-understanding_lime**: attempts to visualize the results from LIME to understand how LIME works
-- **10-other_explainers**: trying out other model explainers
-- **notes from Heike.pdf**: scans of notes written by Heike for this project
+- `00-objectives_and_ideas`: background of the research project, goals of the project, concerns with LIME, and ideas to try
+- `01-training_and_testing_data`: information on the Hamby data, understanding the raw data, and cleaning of the training and testing data
+- `02-plotting_training_and_testing_data`: exploratory plots of the training and testing data
+- `03-computation_issues`: documentation of some of the computation issues I ran into during the project
+- `04-lime_algorithm_and_proposed_methods`: rough draft of the lime algorithm as implemented in the lime R package and proposed methods for improving the lime algorithm
+- `05-applying_lime_to_rtrees`: application of lime and sensativity analysis for many different input options
+- `06-assessing_lime_explanations`: assessment of the lime explanations
+- `07-logistic_regression`: logistic regressions fit to the bullet data and application of lime to the logistic regression
+- `08-iris_comparison`: applying LIME to a random forest fit to the iris data
+- `09-understanding_lime`: attempts to visualize the results from LIME to understand how LIME works
+- `10-other_explainers`: trying out other model explainers
+- `notes from Heike.pdf`: scans of notes written by Heike for this project
 
-#### papers
+**papers**
 
 This folder contains the statistics and firearm examiners papers: 
 
-- **bullet_application**: explains how LIME can be used to understand the random forest model fit to bullet matching data
-- **lime_diagnostics**: explains the need to assess LIME and presents some visual diagnostic tools
+- `bullet_application`: explains how LIME can be used to understand the random forest model fit to bullet matching data
+- `lime_diagnostics`: explains the need to assess LIME and presents some visual diagnostic tools
